--- a/laurentperez.fr/talks/css1/index.html
+++ b/laurentperez.fr/talks/css1/index.html
@@ -95,10 +95,10 @@
 
 			<section>
 				<h2>🤔 ... Une solution à la recherche d'un problème ? 🤔</h2>
-				<p>C'est une boite à outils sur CSS. OK ...</p>
+				<p>C'est une boite à outils créa sur CSS. OK ...</p>
 				<p class="fragment fade-up"><blockquote class="fragment fade-up">" Like 10000 spoons when all you need is a knife ". Ironic</blockquote></p>
 				<p class="fragment fade-up">Ca te donne de quoi construire ton couteau si tu n'en avais pas</p>
-				<p class="fragment fade-up">Et si tu en avais, ça te permet de mieux l'utiliser, le polir, l'améliorer, ou prototyper une alternative, variation, polyfiller une idée</p>
+				<p class="fragment fade-up">Et si tu en avais, ça te permet de mieux l'utiliser, le polir, l'améliorer, ou prototyper une alternative, variation... en faire un pinceau, polyfiller une idée</p>
 				<p class="fragment fade-up">Artisanat, outil sans limites ou presque. Presque*, c'est pas open bar total</p>
 			</section>
 
