--- a/laurentperez.fr/talks/cssp/index.html
+++ b/laurentperez.fr/talks/cssp/index.html
@@ -1,26 +1,26 @@
-<!-- index.html -->
 <!doctype html>
 <style>
   .cats {
-    --ranking: 1; /* mon appréciation des chatons */
+    --ranking: 1; /* ** mon appréciation des chatons ** */
     --rotate:0;
-    /* hack pour charger image, type <image> pas 100% implémenté */
+    /* hack pour charger image, registerProerty type <image> pas 100% implémenté */
     --flamingo:url('fla.jpg');
     list-style-image: var(--flamingo); 
-    background-image: paint(meetup); /* mon peintre */
+    background-image: paint(meetup); /* ** mon peintre **  */
     height: 200px; /* hauteur toile où je vais être peint */
     flex:1;
     margin:10px;
   }
   .under {
-    background-image: paint(underline); /* https://blog.logrocket.com/new-horizons-in-css-houdini-and-the-paint-api-8b307cf387bb/ */
+    background-image: paint(underline); /* ** mon peintre **  */
+    /* credit : https://blog.logrocket.com/new-horizons-in-css-houdini-and-the-paint-api-8b307cf387bb/ */
     padding: 15px;
   }
   main {
+    --sky: white; /* ** mon ciel **  */
+    background-color: var(--sky);
     display: flex;
     border: 1px solid rebeccapurple;
-    --sky: white;
-    background-color: var(--sky);
     transition: all 4s;
   }
   .photo {
@@ -28,9 +28,10 @@
     height: 100px;
     margin: 10px;
   }
+  /* layout API, progressive enhancement si supports */
   @supports (display: layout(coincoin)) {
-  .test {
-    display: layout(coincoin);
+  .coins {
+    display: layout(coincoin); /* mon layout */
     background: aliceblue;
     height: 200px;
     border: 20px solid rebeccapurple;
@@ -43,15 +44,16 @@
   }
 }
 </style>
-<div>Paint API : dessin personnalisé</div>
+
+<div>Properties API + Paint API : dessin personnalisé</div>
 <main>
   <img class="photo" src="https://placekitten.com/100/100" alt="">
   <div class="cats">Evaluez si ces chatons sont mignons  &nbsp;</div>
 </main>
-<div ><p class="under">J'ai une underline custom</p></div>
+<div><p class="under">J'ai une underline custom</p></div>
 
 <div>Layout API : placement custom de 2 enfants : 2 1ers dans les coins, le reste au milieu</div>
-<div class="test">
+<div class="coins" style="visibility: hidden">
     <div class="child" style="width:100px">#1 lorem ipsum bla bla bla bla <img src="https://placekitten.com/100/100"/></div>
     <div class="child" style="width:200px">#2 la la la <img src="https://placekitten.com/100/100"/></div>
     <div>miaou</div>
@@ -76,13 +78,6 @@
     inherits: true,
     initialValue:0
   });
-  /*
-  CSS.registerProperty({
-    name: '--im',
-    syntax: '<image> | none',
-    inherits: true,
-    initialValue: 'none'
-  });*/
 </script>
 <script>
   CSS.paintWorklet.addModule('meetup.js');
@@ -90,10 +85,11 @@
   CSS.layoutWorklet.addModule('masonry.js');
 </script>
 <script>
-  /*
+  /* live repaint sur move
 document.addEventListener('mousemove', function (e) {
   console.log(Math.round(e.screenX / 100));
-  document.querySelector('.cats').style.setProperty('--ranking', Math.round(e.screenX / 100))
+  document.querySelector('.cats')
+          .style.setProperty('--ranking', Math.round(e.screenX / 100))
 });
 */
 </script>
