--- a/laurentperez.fr/talks/css1/index.html
+++ b/laurentperez.fr/talks/css1/index.html
@@ -155,14 +155,14 @@
 				<p><a href="https://www.chromestatus.com/features#houdini">https://www.chromestatus.com/features#houdini</a> </p>
 				<p><a href="https://ishoudinireadyyet.com">https://ishoudinireadyyet.com</a> </p>
 				<ul>
-					<li>CSSOM : shipped Chrome, ii FF, in dev SF</li>
+					<li>CSSOM : shipped Chrome, uc FF, in dev SF</li>
 					<li>Properties Values API : partial 90% Chrome/SF, in dev FF</li>
 					<li>Paint API : shipped Chrome, ii FF, in dev SF</li>
 					<li>Worklet Animation API : partial 80% Chrome (sans chorégraphie, Q1 2020), uc SF</li>
-					<li>Layout API : partial 50% Chrome, ii FF</li>
+					<li>Layout API : partial 70% Chrome, uc FF</li>
 					<li>Font Metrics API : rien, uniquement les specs</li>
 				</ul>
-				<small>ii : Intent to Implement, in dev : en cours : Safary Technology Preview, Chrome Canary</small>
+				<small>uc: intérêt, ii: Intent to Implement, in dev: en cours, Safary TP, Chrome Canary, FF Nightly</small>
 			</section>
 
 			<section>
