--- a/laurentperez.fr/talks/css1/index.html
+++ b/laurentperez.fr/talks/css1/index.html
@@ -86,27 +86,27 @@
 
 			<section>
 				<h2>✨ CSS Houdini ✨</h2>
-				<p class="fragment fade-up">tl;dr : pour un accès direct au moteur CSS via JS</p>
-				<p class="fragment fade-up">on a un véritable accès au moteur, au plus proche de l'interne</p>
+				<p class="fragment fade-up">tl;dr : pour ouvrir davantage le moteur CSS via JS</p>
+				<p class="fragment fade-up">on a un accès au plus proche de l'interne du moteur</p>
 				<p class="fragment fade-up">on peut y créer nos propriétés, peinture/clip, animation, layout</p>
-				<p class="fragment fade-up">travail commencé circa 2016</p>
+				<p class="fragment fade-up">travail commencé circa 2015</p>
 				<p  class="fragment fade-up">suite logique du travail après WebComponents, WebWorkers et Web Animations API</p>
 			</section>
 
 			<section>
 				<h2>🤔 ... Une solution à la recherche d'un problème ? 🤔</h2>
-				<p>C'est une boite à outils créa sur CSS. OK ...</p>
+				<p>C'est un accès "boite à outils créa" sur CSS. OK ...</p>
 				<p class="fragment fade-up"><blockquote class="fragment fade-up">" Like 10000 spoons when all you need is a knife ". Ironic</blockquote></p>
-				<p class="fragment fade-up">Ca te donne de quoi construire ton couteau si tu n'en avais pas</p>
-				<p class="fragment fade-up">Et si tu en avais, ça te permet de mieux l'utiliser, le polir, l'améliorer, ou prototyper une alternative, variation... en faire un pinceau à poils doux au lieu de dents, polyfiller une idée</p>
-				<p class="fragment fade-up">Artisanat, outil sans limites ou presque. Presque*, c'est pas open bar total</p>
+				<p class="fragment fade-up">Ca te donne notamment de quoi construire ton couteau si tu n'en avais pas</p>
+				<p class="fragment fade-up">Si tu en avais, ça te permet de le polir, l'améliorer, ou prototyper une alternative, variation... en faire un pinceau à poils doux au lieu de dents, polyfiller une idée</p>
+				<p class="fragment fade-up">Artisanat, outillage sans limites ou presque* : c'est pas open bar total</p>
 			</section>
 
 			<section>
 				<h2>Qui te donne - ou pas - le couteau ?</h2>
 				<p class="fragment fade-up">Les fabricants de navigateurs, et de librairies - toi compris !</p>
 				<p class="fragment fade-up">Houdini, la reine des neiges dans ton navigateur ❄️</p>
-				<p class="fragment fade-up">Libéré(e), délivré(e) de limites du moteur des librairies tierces. <em>Tu n'attends plus ta fonction : tu peux l'écrire, la partager</em></p>
+				<p class="fragment fade-up">Libéré(e), délivré(e) de limites du moteur des librairies tierces. <em>Tu n'attends plus ta fonction : tu peux l'écrire, la partager dans un cadre standard Web</em></p>
 				<p class="fragment fade-up">... ça t'empêche pas de commit sur OSS si tu sais/peux/veux le faire, ou trouver des compromis créas (chifoumi ?)</p>
 				<small class="fragment fade-up">On cite un hit musical, une princesse Disney, une arme blanche, de l'OSS, 2 des GAFA. Joyeux bordel Tarantinesque. Tout va bien</small>
 			</section>
@@ -120,9 +120,9 @@
 			<section>
 				<h2>Buts et acteurs</h2>
 				<p  class="fragment fade-up">Ouvrir les portes de la "magie" CSS et pouvoir étendre le moteur sans attendre les fabricants ou ticket les librairies tierces</p>
-				<small  class="fragment fade-up">Arrêter le JS à base de addClass/el.style ou les hacks type translate3D(0,0,0) et manipulations de DOM et CSSOM douteuses</small>
-				<p  class="fragment fade-up">Séparer la logique dessin/animation (JS) et son style (CSS)</p>
-				<p  class="fragment fade-up">Atteindre du rendu à 60fps hors thread UI principale</p>
+				<small  class="fragment fade-up">Arrêter l'interaction JS à base de addClass/el.style ou les hacks type translate3D(0,0,0) et manipulations de DOM et CSSOM douteuses</small>
+				<p  class="fragment fade-up">Séparer la logique dessin/animation/layout (JS) et son style (CSS)</p>
+				<p  class="fragment fade-up">Donner du rendu à 60fps hors thread UI principale</p>
 				<p>Task force Google, Mozilla, Apple. Réelle volonté, par et pour des devs/UI</p>
 				<small  class="fragment fade-up">hacks JS = parce qu'on n'a pas le choix</small>
 			</section>
@@ -131,7 +131,7 @@
 				<p>Dans une maquette, 70% est "facile" - relatif à l'expérience de chacun(e)</p>
 				<p>C'est quand le moteur ne te donne pas les autres 30% que la recherche commence (toi, tes collègues, google, stackoverflow, ...)</p>
 				<p>Houdini = moins de galères, moins de "on peut pas le faire en CSS / pur web"</p>
-				<p>Houdini + Flex/Grid + BEM/SASS/LeSS= 🌈</p>
+				<p>Houdini + Flex/Grid + BEM/SASS/LeSS = 🌈</p>
 				<p class="fragment fade-up">nb : ce n'est pas un remplaçant à WebGL. C'est <a href="https://en.wikipedia.org/wiki/WebGPU">WebGPU</a> qui remplacera WebGL</p>
 			</section>
 
@@ -175,12 +175,12 @@
 
 			<section>
 				<p>Que Firefox soit en "retard" <em>n'est pas une mauvaise chose</em></p>
-				<p class="fragment fade-up">C'est dû au switch de Gecko vers Servo à partir de 2017</p>
+				<p class="fragment fade-up">C'est assez dû au switch de Gecko vers Servo à partir de 2017</p>
 				<p class="fragment fade-up">On veut de la diversité dans les moteurs de rendu, Servo est top</p>
 				<p class="fragment fade-up">Pas de One Blink to rule them all</p>
 				<p class="fragment fade-up">nb : la Team IE Edge va verser le meilleur de Edge dans Blink (Reddit aMa 06/19), réouvrir des API bloquées</p>
 				<small>FF Worklet mi Août : <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=1315239">https://bugzilla.mozilla.org/show_bug.cgi?id=1315239</a></small>
-				<small>en Q3 2019 tout Houdini marqué en enhancement, les tickets dataient de 2017</small>
+				<small>en Q3 2019 tout Houdini marqué en enhancement P3, les tickets dataient de 2017, la Worklet est un pilier des API</small>
 			</section>
 			
 			<section>
@@ -188,7 +188,7 @@
 				<p>Objets CSS et propriétés perso typées</p>
 				<p>Objets JS Worklets pour :</p>
 				<p>Dessin, peinture, animation, layout</p>
-				<p>Fontes en dessert/café (léger)</p>
+				<p>Fontes en dessert/café (très léger)</p>
 			</section>
 			
 			<section>
@@ -223,7 +223,7 @@ CSS.registerProperty({
  initialValue: 'vanilla', /* son default */
 });</code></pre>
 				<small>SVP ne pas inventer des horreurs lexicales comme couleur=color, ni substituer aux meta data-* HTML5. C'est pour mieux décrire, pas pour de la metadonn&eacute;e</small>
-				<small>inherits false par défaut pour pas recalculer le CSSOM tree si pas besoin</small>
+				<small>inherits : false par défaut pour pas recalculer le CSSOM tree si pas besoin</small>
 				<p><a href="../cssp">demo</a></p>
 			</section>
 
@@ -240,10 +240,10 @@ CSS.registerProperty({
 			<section>
 				<h2>Short lived ?</h2>
 				<p>La Worklet est dormante et se réveille quand :</p>
-				<p class="fragment fade-up">Une des propriétés CSS mappées change</p>
+				<p class="fragment fade-up">Une des propriétés CSS mappées change (ex:sky)</p>
 				<p class="fragment fade-up">La géométrie de l'élément peint change (ex:resize)</p>
 				<p class="fragment fade-up">La timeline bouge (ex:scroll, demo plus loin)</p>
-				<p class="fragment fade-up">Une Worklet va bosser sur <em>chaque frame, donc à 60fps</em></p>
+				<p class="fragment fade-up">Une Worklet va bosser sur <em>chaque frame, donc 60 fois/seconde</em></p>
 				<p class="fragment fade-up">C'est un WebWorker en plus léger, câblé directement sur le moteur CSS. Voir ça comme un layer Photoshop, effect Premiere, After Effect</p>
 			</section>
 
@@ -251,10 +251,10 @@ CSS.registerProperty({
 				<h2>Sécurité</h2>
 				<ul>
 					<li>Aucun accès au DOM et les Properties sont readonly. Le Canvas est étanche. Si besoin de DOM, faire un Canvas classique sans Paint API</li>
-					<li class="fragment fade-up">Car tu n'as pas spécialement envie qu'un Canvas chargé <em>depuis JS/CSS externe</em> puisse lire ou repeindre des éléments du DOM</li>
+					<li class="fragment fade-up">Car tu n'as pas spécialement envie qu'un Canvas chargé <em>depuis JS/CSS externe</em> puisse lire ou repeindre des éléments de ta page</li>
 					<li class="fragment fade-up">exemple : redessiner champ input de saisie de CB avec un message pour contacter la "banque"</li>
 					<li class="fragment fade-up">Les Properties readonly aussi contre boucle repaint infinie</li>
-					<li>c'est un <em>PaintRenderingContext2D</em> subset de <em>CanvasRenderingContext2D</em></li>
+					<li>c'est un <em>PaintRenderingContext2D</em> subset de <em>CanvasRenderingContext2D</em> : un Canvas restreint</li>
 				</ul>
 				<img src="gifhack.gif" width="200px" style="border: none;" alt="">
 			</section>
@@ -265,15 +265,15 @@ CSS.registerProperty({
 				<p class="fragment fade-up">solution (Juin 2019) : ajouter un type &lt;blob&gt;</p>
 				<p><a href="https://github.com/w3c/css-houdini-drafts/issues/872">https://github.com/w3c/css-houdini-drafts/issues/872</a></p>
 				<p class="fragment fade-up">... puis <em>postMessage</em> plus tard pour pas devoir repasser la Value CSS dans la main UI thread</p>
-				<p>valable aussi pour AnimationWorklet</p>
+				<p>valable aussi pour AnimationWorklet (2020)</p>
 			</section>
 
 			<section>
 				<p>Skins : background:paint('488GT3'); background:paint('motec');</p>
 				<pre class="fragment fade-up"><code class="css">
 /* nos Properties CSS custom (ici, number)*/
---gear: 3;
---speed: 81; /* si pas set, initialValue, ici 0 */
+--gear: 3; /* si pas set, initialValue, ici 0 */
+--speed: 81; 
 --pos: 16;
 --laptime: 7.28;
 --rpm: 6000;
@@ -289,7 +289,7 @@ CSS.registerProperty({
 				... c'est assez fait pour le scroll, et ça le fait - très - bien</p>
 				<small class="fragment fade-up">qui a déjà fait des parallaxes fluides ? des offsets / staggering ? anime.JS ?</small>
 				<p>Syntaxe : <em>AnimationWorklet + KeyFrameEffects</em></p>
-				<p class="fragment fade-up">Note : séquence/chorégraphie à faire à la main. Un peu pénible, car <em>GroupEffect</em> dans la spec - mais caché</p>
+				<p class="fragment fade-up">Note : séquence/chorégraphie à faire à la main. Un peu pénible, car <em>GroupEffect</em> dans la spec - mais caché pour le moment</p>
 			</section>
 
 			<section>
@@ -329,7 +329,7 @@ CSS.registerProperty({
 
 			<section>
 				<p>⌛ Le temps peut être altéré par une autre unité libre ⌛</p>
-				<p class="fragment fade-up"><a href="https://majido.github.io/houdini-samples/animation-worklet/touch-input/drag.html">Superbe démo : le temps basé sur un deltaX d'un CSS Pointer Event</a></p>
+				<p class="fragment fade-up"><a href="https://majido.github.io/houdini-samples/animation-worklet/touch-input/drag.html">Belle démo : le temps basé sur un deltaX d'un CSS Pointer Event (... ton doigt/stylo)</a></p>
 				<p class="fragment fade-up"><img src="incep.png" alt=""></p>
 				<p class="fragment fade-up"><img src="spin.jpg" width="400px" alt=""></p>
 			</section>
@@ -367,7 +367,7 @@ CSS.registerProperty({
 				<p class="fragment fade-up">Conteneur de <em>LayoutChild/Fragments</em> dans un <em>ParentLayout</em></p>
 				<small class="fragment fade-up">Le <em>Parent</em> a des borders, paddings : les <em>Edges</em>. Entre les <em>Edges</em>, on a des <em>Constraints</em>. Les <em>LayoutChild</em> sont dans ces <em>Constraints</em> et ont des <em>Fragments</em></small>
 				<p class="fragment fade-up">La *clef* : chaque <em>Fragment</em> a un <em>inlineOffset/blockOffset</em> pour le positionner par rapport à la box de son <em>Child</em></p>
-				<p>C'est - en gros - du position:relative; dynamique, précalculable, dans un <em>wireframe</em></p>
+				<p>C'est - en gros - du position:relative; dynamique, précalculable, dans un <em>wireframe</em> nommé</p>
 			</section>
 
 			<section>
@@ -380,14 +380,12 @@ CSS.registerProperty({
 				<p><a href="../cssp">demo</a></p>
 			</section>
 
-			
-
 			<section>
 				<h2>🔠 Font Metrics API 🔠</h2>
 				<p>... spec seulement utilitaire, causée par la Layout API :</p>
-				<p>dessiner des blocs custom c'est cool mais : on a parfois besoin de gérer du texte/symboles dedans</p>
+				<p>placer des blocs custom c'est cool mais : on a parfois besoin de gérer du texte/symboles dedans</p>
 				<small class="fragment fade-up">ex : faire son propre line-breaking, connaître les tailles réelles des symboles math chimie ∑ √ ∞, des ligatures Œ, Æ, محرك, et cætera … &lt;- c'est des points de suspension, pas '...' </small>
-				<p class="fragment fade-up">exposer seulement la Font ne suffit pas : il faut descendre au niveau du <em>glyphe</em> dessiné par chaque navigateur</p>
+				<p class="fragment fade-up">exposer seulement la Font ne suffit pas : il faut descendre au niveau du <em>glyphe</em> dessiné par chaque navigateur, à sa façon</p>
 				<p class="fragment fade-up">la FMAPI donnera un objet JS FontMetrics des glyphes dessinés, utilitaire</p>
 			</section>
 				
