--- a/laurentperez.fr/talks/css1/index.html
+++ b/laurentperez.fr/talks/css1/index.html
@@ -311,8 +311,8 @@ CSS.registerProperty({
 			</section>
 
 			<section>
-				<p>Main thread, Compositor ?</p>
-				<p>Main thread : là où la UI vit (impactée par manips de DOM, CSS, JS)</p>
+				<p>⚙️️ Main thread, Compositor ? 🖌️</p>
+				<p>Main thread : là où la UI vit (impactée par réseau, manips de DOM, CSS, JS)</p>
 				<p>Compositor : le dernier élément de la chaîne de rendu d'un navigateur</p>
 				<p>Chargement page + ressources -> construction des arbres DOM, CSSOM -> Layout x/y -> mise en Layers -> Peinture + Compositing -> envoi des pixels vers la carte graphique</p>
 				<p>spoiler : talk à venir sur comment fonctionne un moteur de rendu </p>
